--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,6 +16,6 @@ main:
   - name: Publications
     url: publication/
     weight: 20
-#  - name: Documentation
-#    url: docs/
-#    weight: 40
+  - name: Documentation
+    url: docs/
+    weight: 30
