--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
 #    url: /
 #    weight: 10
   - name: SPARQL
-    url: http://ddbkg.fiz-karlsruhe.de
+    url: http://ddbkg.fiz-karlsruhe.de/sparql
     weight: 10
   - name: GitHub
     url: https://github.com/ISE-FIZKarlsruhe/ddbkg
